# CMakeLearning

./: .gitignore  CMakeLists.txt
source/exeFolder/: CMakeLists.txt  main.cpp
source/exeFolder/Stuff/: FunctionHelpers.cpp  FunctionHelpers.h
source/libFolder/: CMakeLists.txt  libEntry.h
